--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
     <title>Kaushik's Home Page</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="style.css"/>
+
+    <link href="home/css/bootstrap.min.css" rel="stylesheet">
+    <link href="home/css/landing-page.css" rel="stylesheet">
+    <link href="home/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
 </head>
-<body class="container">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+<body>
 
-            <div class="col-xs-8">
-                <a href="#" class="navbar-brand navbar-text profile-name">Kaushik Veluru</a>
-            </div>
-
-            <div class="col-xs-4">
-                <image class="profile-image" src="media/kaushik.jpeg"></image>
-            </div>
-
-    </nav>
-
-    <div class="container-fluid">
-
-        <h1>Web Dev Course Home Page</h1>
-
-        <p>
-            This page is the entry point to all the works that are done during Fall'16 semester for CS5610 course.
-        </p>
-
-        <div class="row">
-            <div class="col-xs-6">
-                <a role="button" class="btn btn-primary form-control" href="project/index.html">Project</a>
-            </div>
-            <div class="col-xs-6">
-                <a role="button" class="btn btn-primary form-control" href="assignment/index.html">Assignment</a>
-            </div>
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <div class="container topnav">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand topnav" href="#">Kaushik Veluru</a>
         </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/assignment/index.html">Assignment</a>
+                </li>
+                <li>
+                    <a href="/project/index.html">Project</a>
+                </li>
+                <li>
+                    <a href="https://github.com/kaushikveluru/veluru-kaushik-webdev">Code Repository</a>
+                </li>
+                <li>
+                    <a href="/test/index.html">Test MongoDB</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+
+<!-- Header -->
+<a name="about"></a>
+<div class="intro-header">
+    <div class="container">
+
         <div class="row">
-            <div class="col-xs-6">
-                <a role="button" class="btn btn-primary form-control" href="test/index.html">Test MongoDB</a>
-            </div>
-            <div class="col-xs-6">
-                <a role="button" class="btn btn-primary form-control" href="https://github.com/kaushikveluru/veluru-kaushik-webdev">GitHub Repository</a>
+            <div class="col-lg-12">
+                <div class="intro-message">
+                    <h1>Kaushik Veluru</h1>
+                    <h3>You don't know me till you know me</h3>
+                    <hr class="intro-divider">
+                    <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/kaushikveluru" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/kaushikveluru" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/in/kaushikveluru" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
     </div>
+    <!-- /.container -->
 
-    <nav class="navbar navbar-default navbar-fixed-bottom">
+</div>
+<!-- /.intro-header -->
 
-            <p class="navbar-text navbar-brand">Developed by Kaushik Veluru</p>
+<!-- Page Content -->
 
-    </nav>
+<a  name="services"></a>
+<div class="content-section-a">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5 col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">Professional</h2>
+                <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+            </div>
+            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <img class="img-responsive" src="home/img/ipad.png" alt="">
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+</div>
+<!-- /.content-section-a -->
+
+<div class="content-section-b">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">Personal</h2>
+                <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+            </div>
+            <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                <img class="img-responsive" src="home/img/dog.png" alt="">
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+</div>
+<!-- /.content-section-b -->
+
+<div class="content-section-a">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-5 col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">Social</h2>
+                <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+            </div>
+            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <img class="img-responsive" src="home/img/phones.png" alt="">
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+</div>
+<!-- /.content-section-a -->
+
+</div>
+<!-- /.banner -->
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="copyright text-muted small">Copyright &copy; Kaushik Veluru 2016. All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- jQuery -->
+<script src="home/js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="home/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
